[package]
name = "substrate-test-runner"
version = "0.1.0"
authors = ["Tomasz Drwięga <tomusdrw@gmail.com>", "Seun Lanlege <seunlanlege@gmail.com>"]
edition = "2018"

[dependencies]
# client deps
sc-executor = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-service = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-informant = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-network = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-transaction-graph = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sc-rpc-server = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }

# primitive deps
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-session = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }

# pallets
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "f7a8b10" }

parity-scale-codec = "1.3.1"
env_logger = "0.7.1"
log = "0.4.8"
futures01 = { package = "futures", version = "0.1.29" }
futures = { package = "futures", version = "0.3", features = ["compat"] }
rand = "0.7"
tokio = { version = "0.2", features = ["full"] }

# Calling RPC
jsonrpc-core-client = { version = "15.1", features = ["ws"] }
jsonrpc-core = "15.1"
tokio-compat = { version = "0.1.6", features = ["rt-full"] }
