[package]
name = "test-runtime"
authors = ["Anonymous"]
edition = "2018"
version = "0.0.1"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

balances = { default-features = false, package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
randomness-collective-flip = { default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sudo = { default-features = false, package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
timestamp = { default-features = false, package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
transaction-payment = { default-features = false, package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" , default-features = false }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner" , default-features = false }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", branch = "seun-substrate-test-runner"  }

[features]
default = ["std"]
std = [
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
]
